# url_shortener

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
alias/: admin.py  apps.py  models.py  serializers.py  views.py
alias/migrations/: 0001_initial.py
src/: manage.py
src/analytics/: models.py  serializers.py  urls.py  views.py
src/analytics/migrations/: 0001_initial.py
src/shortener/: models.py  serializers.py  urls.py  views.py
src/shortener/migrations/: 0001_initial.py
src/tests/analytics/: test_serializers.py  test_views.py
src/tests/shortener/: test_serializers.py  test_views.py
src/url_shortener/: settings.py  urls.py
tests/alias/: test_serializers.py  test_views.py
url_shortener/: settings.py  urls.py
